--- a/.editorconfig
+++ b/.editorconfig
@@ -6,10 +6,10 @@ charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.js,*.vue,*.json,*.yml,*.yaml}]
+[{*.js,*.vue,*.json,*.yml,*.yaml,*.mjs}]
 indent_size = 2
 indent_style = space
 
 ## JS
-[*.js]
+[*.js,*.mjs]
 quote_type = single
