--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.2.2",
+    "csv-parse": "^5.3.3",
     "dotenv": "^16.0.3",
     "flat": "^5.0.2",
     "knex": "^2.3.0",
