--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.2.2",
+    "busboy": "^1.6.0",
     "csv-parse": "^5.3.3",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-openapi-validator": "^5.0.1",
     "flat": "^5.0.2",
     "knex": "^2.3.0",
-    "mysql2": "^2.3.3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
