Begginings of node discovery and task engine.
Updates to redfish library to create from a serialized form of it.

Adds endpoint to begin ingestion process from range of IPs.

Update base DB structure to include ingest task uuid column.

The task engine uses bullmq to handle the processing of a workqueue and custom
built task scheduler and workflow dependency tracker. The workflows are stored
in memory at this time. Eventually need to persist that to handle app restarts.

--- a/src/.env.example
+++ b/src/.env.example
@@ -3,6 +3,11 @@ RX_MYSQL_USER = "USER"
 RX_MYSQL_PASSWORD = "PASSWORD"
 RX_MYSQL_DATABASE = "DBNAME"
 
+RX_REDIS_HOST = "HOSTNAMEORIP"
+RX_REDIS_PORT = "6379"
+RX_REDIS_DB = "2"
+RX_REDIS_PASS = "PASSWORD"
+
 RX_SECRET = "SOMERANDOMUNSHAREDSTRING"
 RX_ENV_PREFIX="ENVPREFIX"
 
