--- a/package.json
+++ b/package.json
@@ -26,17 +26,22 @@
     "@headlessui/vue": "^1.7.7",
     "@heroicons/vue": "^2.0.13",
     "axios": "^1.2.2",
+    "bullmq": "^3.5.10",
     "busboy": "^1.6.0",
     "csv-parse": "^5.3.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openapi-validator": "^5.0.1",
     "flat": "^5.0.2",
+    "graphology": "^0.25.1",
+    "graphology-dag": "^0.2.0",
+    "jsondiffpatch": "^0.4.1",
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "netmask": "^2.0.2",
+    "uuid": "^9.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
