--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:up": "knex --knexfile ./src/database/knexfile.js migrate:up",
     "db:newMigration": "knex --knexfile ./src/database/knexfile.js migrate:make",
     "db:rollback": "knex --knexfile ./src/database/knexfile.js migrate:rollback",
+    "db:newSeed": "knex --knexfile ./src/database/knexfile.js seed:make",
     "db:seed": "knex --knexfile ./src/database/knexfile.js seed:run",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite --config ./src/ui/frontend/vite.config.js",
@@ -27,11 +28,13 @@
     "@heroicons/vue": "^2.0.13",
     "axios": "^1.2.2",
     "bullmq": "^3.5.10",
+    "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
     "csv-parse": "^5.3.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openapi-validator": "^5.0.1",
+    "express-session": "^1.17.3",
     "flat": "^5.0.2",
     "graphology": "^0.25.1",
     "graphology-dag": "^0.2.0",
@@ -42,6 +45,8 @@
     "mysql2": "^2.3.3",
     "netmask": "^2.0.2",
     "uuid": "^9.0.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
