--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@headlessui/vue": "^1.7.7",
     "@heroicons/vue": "^2.0.13",
     "axios": "^1.2.2",
-    "bullmq": "^3.5.10",
     "bcryptjs": "^2.4.3",
+    "bullmq": "^3.5.10",
     "busboy": "^1.6.0",
+    "connect-redis": "^6.1.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "csv-parse": "^5.3.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -44,9 +47,9 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "netmask": "^2.0.2",
-    "uuid": "^9.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "uuid": "^9.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -57,6 +60,17 @@
     "nodemon": "^2.0.20",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
+    "vanilla-text-mask": "^5.1.1",
     "vite": "^4.0.4"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "src/ui/frontend*",
+      "node_modules/*"
+    ],
+    "watch": [
+      "*.*",
+      ".env"
+    ]
   }
 }
