redfish-functions-and-discovery

--- a/src/.env.example
+++ b/src/.env.example
@@ -14,3 +14,5 @@ RX_ENV_PREFIX="ENVPREFIX"
 RX_LOGGING_USE_CONSOLE_LOGGING = "true"
 RX_LOGGING_USE_JSON_LOGGIN = "false"
 RX_LOGGING_LEVEL = "info"
+
+RX_FVM_IP = "10.38.43.50"
