RHEL or Rocky installation and uninstallation scripts

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,9 +1,9 @@
-RX_MYSQL_HOST = "HOSTNAMEORIP"
-RX_MYSQL_USER = "USER"
+RX_MYSQL_HOST = "localhost"
+RX_MYSQL_USER = "root"
 RX_MYSQL_PASSWORD = "PASSWORD"
-RX_MYSQL_DATABASE = "DBNAME"
+RX_MYSQL_DATABASE = "ndm"
 
-RX_REDIS_HOST = "HOSTNAMEORIP"
+RX_REDIS_HOST = "localhost"
 RX_REDIS_PORT = "6379"
 RX_REDIS_DB = "2"
 RX_REDIS_PASS = "PASSWORD"
