--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jsondiffpatch": "^0.4.1",
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
+    "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "netmask": "^2.0.2",
@@ -61,11 +62,12 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "vanilla-text-mask": "^5.1.1",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vue-tippy": "^6.0.0"
   },
   "nodemonConfig": {
     "ignore": [
-      "src/ui/frontend*",
+      "src/ui/frontend/*",
       "node_modules/*"
     ],
     "watch": [
