--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "netmask": "^2.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "stack-trace": "^0.0.10",
     "uuid": "^9.0.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
