Add startup scripts.

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,18 +1,23 @@
-RX_MYSQL_HOST = "localhost"
-RX_MYSQL_USER = "root"
-RX_MYSQL_PASSWORD = "PASSWORD"
-RX_MYSQL_DATABASE = "ndm"
+RX_MYSQL_HOST="localhost"
+RX_MYSQL_USER="root"
+RX_MYSQL_PASSWORD="PASSWORD"
+RX_MYSQL_DATABASE="ndm"
 
-RX_REDIS_HOST = "localhost"
-RX_REDIS_PORT = "6379"
-RX_REDIS_DB = "2"
-RX_REDIS_PASS = "PASSWORD"
+RX_REDIS_HOST="localhost"
+RX_REDIS_PORT="6379"
+RX_REDIS_DB="2"
+RX_REDIS_PASS="PASSWORD"
 
-RX_SECRET = "SOMERANDOMUNSHAREDSTRING"
+RX_SECRET="SOMERANDOMUNSHAREDSTRING"
 RX_ENV_PREFIX="ENVPREFIX"
 
-RX_LOGGING_USE_CONSOLE_LOGGING = "true"
-RX_LOGGING_USE_JSON_LOGGIN = "false"
-RX_LOGGING_LEVEL = "info"
+RX_LOGGING_USE_CONSOLE_LOGGING="true"
+RX_LOGGING_USE_JSON_LOGGIN="false"
+RX_LOGGING_LEVEL="info"
 
-RX_FVM_IP = "10.38.43.50"
+RX_FVM_IP="10.38.43.50"
+
+RX_SERVER_NAME=""
+RX_SERVER_PORT=8443
+RX_SERVER_KEY=""
+RX_SERVER_CERT=""
