--- a/src/.env.example
+++ b/src/.env.example
@@ -9,6 +9,7 @@ RX_REDIS_DB="2"
 RX_REDIS_PASS="PASSWORD"
 
 RX_SECRET="SOMERANDOMUNSHAREDSTRING"
+RX_CIPHER="aes-256-gcm"
 RX_ENV_PREFIX="ENVPREFIX"
 
 RX_LOGGING_USE_CONSOLE_LOGGING="true"
