--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "flat": "^5.0.2",
     "graphology": "^0.25.1",
     "graphology-dag": "^0.2.0",
+    "json-schema-traverse": "^1.0.0",
     "jsondiffpatch": "^0.4.1",
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
@@ -49,8 +50,10 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "netmask": "^2.0.2",
+    "nutanix_foundation": "git+https://gitlab.rtp.nutanix.com/corp-se-team/nutanix_foundation.git",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "ssh2": "^1.14.0",
     "stack-trace": "^0.0.10",
     "uuid": "^9.0.0",
     "vue": "^3.2.45",
