--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-openapi-validator": "^5.0.1",
     "express-session": "^1.17.3",
     "flat": "^5.0.2",
+    "fuse.js": "^6.6.2",
     "graphology": "^0.25.1",
     "graphology-dag": "^0.2.0",
     "json-schema-traverse": "^1.0.0",
