Improve node display and searchability.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ag-grid-community/core": "^30.1.0",
     "@ag-grid-community/styles": "^30.1.0",
     "@ag-grid-community/vue3": "^30.1.0",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@headlessui/vue": "^1.7.7",
     "@heroicons/vue": "^2.0.13",
     "axios": "^1.2.2",
