--- a/src/.env.example
+++ b/src/.env.example
@@ -22,3 +22,7 @@ RX_SERVER_NAME=""
 RX_SERVER_PORT=8443
 RX_SERVER_KEY=""
 RX_SERVER_CERT=""
+
+RX_FILESTORE_LOCAL=true
+RX_FILESTORE_BASE_DIRECTORY='files'
+RX_FILESTORE_EXPORT_DIRECTORY='exports'
