--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@headlessui/vue": "^1.7.7",
     "@heroicons/vue": "^2.0.13",
+    "@tus/file-store": "^1.1.0",
+    "@tus/server": "^1.1.0",
     "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "bullmq": "^3.15.8",
@@ -47,7 +49,7 @@
     "flat": "^5.0.2",
     "fuse.js": "^6.6.2",
     "graphology": "^0.25.1",
-    "graphology-dag": "^0.2.0",
+    "graphology-dag": "^0.4.0",
     "json-schema-traverse": "^1.0.0",
     "jsondiffpatch": "^0.4.1",
     "knex": "^2.3.0",
@@ -61,6 +63,7 @@
     "passport-local": "^1.0.0",
     "ssh2": "^1.14.0",
     "stack-trace": "^0.0.10",
+    "tus-js-client": "^3.1.1",
     "uuid": "^9.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
@@ -80,7 +83,8 @@
   "nodemonConfig": {
     "ignore": [
       "src/ui/frontend/*",
-      "node_modules/*"
+      "node_modules/*",
+      "files/*"
     ],
     "watch": [
       "*.*",
