Chore/updated install scripts

--- a/src/.env.example
+++ b/src/.env.example
@@ -26,3 +26,6 @@ RX_SERVER_CERT=""
 RX_FILESTORE_LOCAL=true
 RX_FILESTORE_BASE_DIRECTORY='files'
 RX_FILESTORE_EXPORT_DIRECTORY='exports'
+
+NDM_SSH_PRIVATE=""
+NDM_SSH_PUBLIC=""
