--- a/src/.env.example
+++ b/src/.env.example
@@ -22,9 +22,11 @@ RX_SERVER_NAME=""
 RX_SERVER_PORT=8443
 RX_SERVER_KEY=""
 RX_SERVER_CERT=""
+NDM_SERVER_COOKIE=""
 
 RX_FILESTORE_LOCAL=true
 RX_FILESTORE_BASE_DIRECTORY='files'
+NDM_FILESTORE_TUS_BASE='files'
 RX_FILESTORE_EXPORT_DIRECTORY='exports'
 
 NDM_SSH_PRIVATE=""
