--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,7 @@ build:
       - package.json
       - package-lock.json
       - ndm.tar.gz
+      - dependencies.tar.gz
     # exclude:
     #   - src/ui/frontend/public/**/*
     #   - src/ui/frontend/src/**/*
