--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rx-lite",
-  "version": "1.0.0",
-  "description": "Reservation System and Datacenter Management Suite for Nutanix based infrastructure",
+  "name": "nutanix_deployment_manager",
+  "version": "0.5.0",
+  "description": "Datacenter Management Suite for Nutanix based infrastructure",
   "main": "index.js",
   "scripts": {
     "db:fresh": "knex --knexfile ./src/database/knexfile.js migrate:rollback --all && npm run db:migrate",
@@ -20,10 +20,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.rtp.nutanix.com:corp-se-team/rx-lite.git"
+    "url": "https://github.com/nutanix-outcome-engineering/nutanix_deployment_manager"
   },
   "author": "Outcome_Engineering@nutanix.com",
-  "license": "MIT",
+  "license": "Apache 2.0",
   "dependencies": {
     "@ag-grid-community/client-side-row-model": "^30.1.0",
     "@ag-grid-community/core": "^30.1.0",
@@ -58,7 +58,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.2",
     "netmask": "^2.0.2",
-    "nutanix_foundation": "git+https://gitlab.rtp.nutanix.com/corp-se-team/nutanix_foundation.git",
+    "nutanix_foundation": "git+https://github.com/nutanix-outcome-engineering/nutanix_foundation.git",
+    "nutanix_prism": "git+https://github.com/nutanix-outcome-engineering/nutanix_prism.git",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "ssh2": "^1.14.0",
