Rename all variable prefixes with NDM.

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,33 +1,33 @@
-RX_MYSQL_HOST="localhost"
-RX_MYSQL_USER="root"
-RX_MYSQL_PASSWORD="PASSWORD"
-RX_MYSQL_DATABASE="ndm"
+NDM_MYSQL_HOST="localhost"
+NDM_MYSQL_USER="root"
+NDM_MYSQL_PASSWORD="PASSWORD"
+NDM_MYSQL_DATABASE="ndm"
 
-RX_REDIS_HOST="localhost"
-RX_REDIS_PORT="6379"
-RX_REDIS_DB="2"
-RX_REDIS_PASS="PASSWORD"
+NDM_REDIS_HOST="localhost"
+NDM_REDIS_PORT="6379"
+NDM_REDIS_DB="2"
+NDM_REDIS_PASS="PASSWORD"
 
-RX_SECRET="SOMERANDOMUNSHAREDSTRING"
-RX_CIPHER="aes-256-gcm"
-RX_ENV_PREFIX="ENVPREFIX"
+NDM_SECRET="SOMERANDOMUNSHAREDSTRING"
+NDM_CIPHER="aes-256-gcm"
+NDM_ENV_PREFIX="ENVPREFIX"
 
-RX_LOGGING_USE_CONSOLE_LOGGING="true"
-RX_LOGGING_USE_JSON_LOGGIN="false"
-RX_LOGGING_LEVEL="info"
+NDM_LOGGING_USE_CONSOLE_LOGGING="true"
+NDM_LOGGING_USE_JSON_LOGGIN="false"
+NDM_LOGGING_LEVEL="info"
 
-RX_FVM_IP="10.38.43.50"
+NDM_FVM_IP="10.38.43.50"
 
-RX_SERVER_NAME=""
-RX_SERVER_PORT=8443
-RX_SERVER_KEY=""
-RX_SERVER_CERT=""
+NDM_SERVER_NAME=""
+NDM_SERVER_PORT=8443
+NDM_SERVER_KEY=""
+NDM_SERVER_CERT=""
 NDM_SERVER_COOKIE=""
 
-RX_FILESTORE_LOCAL=true
-RX_FILESTORE_BASE_DIRECTORY='files'
+NDM_FILESTORE_LOCAL=true
+NDM_FILESTORE_BASE_DIRECTORY='files'
 NDM_FILESTORE_TUS_BASE='files'
-RX_FILESTORE_EXPORT_DIRECTORY='exports'
+NDM_FILESTORE_EXPORT_DIRECTORY='exports'
 
 NDM_SSH_PRIVATE=""
 NDM_SSH_PUBLIC=""
