Use variable in workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,7 @@
 name: 'Test and Build Pipeline'
 on: [push]
+env:
+  NDM_SKIP_UNSET_CHECK: ${{ vars.NDM_SKIP_UNSET_CHECK }}
 jobs:
   test:
     strategy:
